# nku-stock-prediction

./: cnn_stock_prediction.py  gan_stock_prediction.py  goldETF.csv  merged_file.csv  pyproject.toml  sentiment_dict.py  test.py  torch_GitHub.py  transfomer_stock_prediction.py  transformer_lstm(无情感值).py  transformer_lstm.py
stock/: gan.py
