[tool.poetry]
name = "stock-prediction"
version = "0.1.0"
description = ""
authors = ["Capybaring <Q3159508394@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
tqdm = "^4.67.1"
jieba = "^0.42.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
